# FipiBankClassification

./: .gitignore  Makefile  README.md  dev-requirements.txt  fipibank.service  justfile  problems_classification.ipynb  problems_classification_2024.ipynb  pyproject.toml  requirements.txt
config/: __init__.py  config.py
database/: __init__.py  main.py  methods.py  models.py
database/methods/: insert.py
misc/: __init__.py  path_control.py  singleton.py
parse/: __main__.py  make_request.py  problem_data.py
specifiers/: __init__.py  subject_specifiers.py
src/: problem_types.py
src/config/: config.py
src/database/: __init__.py  const.py  methods.py  models.py
src/misc/: path_control.py
src/parse/: __init__.py  __main__.py
src/specifiers/: __init__.py  base.py  subject_specifiers.py
src/utils/: __main__.py
src/web_ui/: app.py
src/web_ui/static/js/: script.js
src/web_ui/templates/: index.html
utils/: __init__.py  __main__.py
web_ui/: app.py
web_ui/static/js/: script.js
web_ui/templates/: index.html
